Update QuizTest.java